Assignment2_Zhao_Duo/tests/good/ScientificNotationBigMinus.calc
a .0E-23 b 1.E-25 c 2.3E-31 d 34.5E-45 e 6.78E-73 f 99.99E-56 g 3E-93 h 76E-45
.0E-23
1.E-25
2.3E-31
34.5E-45
6.78E-73
99.99E-56
3E-93
76E-45
a .0E-2 b 1.E-2 c 2.3E-3 d 34.5E-4 e 6.78E-7 f 99.99E-5 g 3E-9 h 76E-4
.0E-2
1.E-2
2.3E-3
34.5E-4
6.78E-7
99.99E-5
3E-9
76E-4
