Assignment2_Zhao_Duo/tests/bad/ScientificNotationLittleBlandWithBadCharacters.calc
a .0%e23 b 1.%e25 c 2.3%e31 d 34.5%e45 e 6.78%e73 f 99.99%e56 g 3%e93 h 76%e45
.0%e23
1.%e25
2.3%e31
34.5%e45
6.78%e73
99.99%e56
3%e93
76%e45
a .0%e2 b 1.%e2 c 2.3%e3 d 34.5%e4 e 6.78%e7 f 99.99%e5 g 3%e9 h 76%e4
.0%e2
1.%e2
2.3%e3
34.5%e4
6.78%e7
99.99%e5
3%e9
76%e4
a .0e%23 b 1.e%25 c 2.3e%31 d 34.5e%45 e 6.78e%73 f 99.99e%56 g 3e%93 h 76e%45
.0e%23
1.e%25
2.3e%31
34.5e%45
6.78e%73
99.99e%56
3e%93
76e%45
a .0e%2 b 1.e%2 c 2.3e%3 d 34.5e%4 e 6.78e%7 f 99.99e%5 g 3e%9 h 76e%4
.0e%2
1.e%2
2.3e%3
34.5e%4
6.78e%7
99.99e%5
3e%9
76e%4
a .0e2%3 b 1.e2%5 c 2.3e3%1 d 34.5e4%5 e 6.78e7%3 f 99.99e5%6 g 3e9%3 h 76e4%5
.0e2%3
1.e2%5
2.3e3%1
34.5e4%5
6.78e7%3
99.99e5%6
3e9%3
76e4%5
a .0e2% b 1.e2% c 2.3e3% d 34.5e4% e 6.78e7% f 99.99e5% g 3e9% h 76e4%
.0e2%
1.e2%
2.3e3%
34.5e4%
6.78e7%
99.99e5%
3e9%
76e4%
a .0e23% b 1.e25% c 2.3e31% d 34.5e45% e 6.78e73% f 99.99e56% g 3e93% h 76e45%
.0e23%
1.e25%
2.3e31%
34.5e45%
6.78e73%
99.99e56%
3e93%
76e45%
